[tool.poetry]
name = "action-beanstalk-deploy"
version = "0.1.0"
description = ""
authors = ["moneymeets <admin@moneymeets.com>"]

[tool.poetry.dependencies]
python = "~3.12"

boto3 = "*"
dataclasses-json = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

add-trailing-comma = "*"
black = "*"
flake8 = "*"
flake8-black = "*"
flake8-coding = "*"
flake8-isort = "*"
flake8-quotes = "*"
isort = {extras = ["pyproject"], version = "*"}

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120

[tool.coverage.run]
branch = true
source = ["."]
omit = ["test_*.py"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
