[tool.poetry]
name = "action-beanstalk-deploy"
version = "0.1.0"
description = ""
authors = ["moneymeets <admin@moneymeets.com>"]

[tool.poetry.dependencies]
python = "~3.12"

boto3 = "*"
dataclasses-json = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

ruff = "*"

[tool.poetry.scripts]
action_beanstalk_deploy_runner = 'action_beanstalk_deploy.action:run'

[tool.coverage.run]
branch = true
source = ["."]
omit = ["test_*.py"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
