[project]
name = "action-beanstalk-deploy"
version = "0.1.0"
authors = [
    { name = "moneymeets GmbH", email = "service@moneymeets.com" },
]
readme = "README.md"
requires-python = "~=3.14.0"

[project.scripts]
action_beanstalk_deploy_runner = 'action_beanstalk_deploy.action:run'

[tool.poetry.dependencies]
python = "~=3.14.0"

boto3 = "*"
dataclasses-json = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

ruff = "*"

[tool.coverage.run]
branch = true
source = ["."]
omit = ["test_*.py"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
